--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ main {
     background-image:url("images/backg.jpeg");
     width: 100%;
     overflow: hidden;
+    box-sizing: border-box;
 }
 
 @font-face {
