--- a/index.css
+++ b/index.css
@@ -44,13 +44,18 @@ main {
     font-family: "Cat";
     src:url("Comic_CAT.otf") format("opentype"),
 }
+
+h1 {
+    text-align: left;
+}
+
 .title1 {
-    margin-left: 35vw;
-    /* margin-top: 47px; */
+    margin-left: 34%;
+    /*margin-top: 47px; */
     color: #6B2222;
     font-family: SoyuzGrotesk;
     font-weight: 700;
-    font-size: 15.2vw;
+    font-size: 15vw;
     line-height: 100%;
 }
 
@@ -68,7 +73,7 @@ main {
 }
 
 .image_me {
-    margin-top: -90px;
+    margin-top: -23vw;
     margin-left: 10px;
 }
 
@@ -111,6 +116,11 @@ main {
 
 .newpadding {
     margin-left: 40px;
+}
+
+.calendar {
+    width: 37.5px;
+    height: 36.5625px;
 }
 
 .icon_loc {
@@ -162,7 +172,7 @@ main {
     color: #6B2222;
     font-family: Cat;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 7.6vw;
     line-height: 100%;
 }
 
@@ -179,8 +189,13 @@ main {
     display: flex;
     flex-direction: column;
     margin-left: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
     gap: 20px;
+    margin-bottom: 30px;
+}
+
+.stars {
+    max-width: 312px;
 }
 
 .text_link {
